k8s/py.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-service
spec:
  selector:
    app: py
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
