k8s/py.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/read-timeout: "600"
    nginx.ingress.kubernetes.io/write-timeout: "600"
spec:
  tls:
    - hosts:
        - www.goxo.cc
        - goxo.cc
      secretName: goxo-tls
  rules:
    - host: goxo.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
    - host: www.goxo.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: py-service
                port:
                  number: 8080
